--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,12 @@
-/* create custom CSS variables (also called custom properties) and apply them to the root of the page, making them accessible to all other CSS */
 :root {
-  /* declare a variable with `--` syntax */
   --dark: #0d6e81;
   --light: #fff;
   --navlink-color: #b9c6ae;
 }
+
+/* * {
+  box-sizing: border-box;
+} */
 
 body {
   display: flex;
@@ -12,12 +14,18 @@ body {
   line-height: 1.3;
 }
 
+.profile {
+  vertical-align: left;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1%;
-  /* use CSS var() function to reference a variable created above */
   background-color: var(--dark);
   color: var(--light);
 }
@@ -62,22 +70,6 @@ main {
   margin: 2% auto;
 }
 
-article {
-  /* If we were to change the value of `--dark`, then all references to it would change automatically */
-  border-bottom: 1px solid var(--dark);
-}
-
-article p {
-  margin: 2% 0;
-  font-size: 110%;
-}
-
-article ul {
-  margin-left: 5%;
-  font-size: 110%;
-  list-style: circle;
-}
-
 footer {
   display: flex;
   flex-direction: column;
@@ -106,30 +98,113 @@ footer {
   width: 75%
 }
 
-.cardsmall {
-  border-style: solid;
-  border-width: 3px;
-  padding: 10px;
-  flex: 0 0 20%;
-  margin: 20px;
+.band {
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+  
+  display: grid;
+  
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+  
 }
 
-.cardbig {
-  border-style: solid;
-  border-width: 3px;
-  padding: 10px;
-  flex: 0 0 80%;
-  margin: 20px;
+.card {
+  min-height: 100%;
+  background: white;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: #444;
+  position: relative;
+  top: 0;
+  transition: all .1s ease-in;
 }
 
-@media screen and (max-width: 768px) {
+.card:hover {
+  top: -2px;
+  box-shadow: 0 4px 5px rgba(0,0,0,0.2);
+}
+
+.card article {
+  padding: 20px;
+  display: flex;
+  
+  flex: 1;
+  justify-content: space-between;
+  flex-direction: column;
+  
+}
+
+.card .thumb {
+  padding-bottom: 60%;
+  background-size: cover;
+  background-position: center center;
+}
+
+.card p { 
+  flex: 1; /* make p grow to fill available space*/
+  line-height: 1.4;
+}
+
+h2 {
+  font-size: 20px;
+  margin: 0;
+  color: #333;
+}
+
+.card span {
+  font-size: 12px;
+  font-weight: bold;
+  color: #999;
+  text-transform: uppercase;
+  letter-spacing: .05em;
+  margin: 2em 0 0 0;
+}
+
+/* @media screen and (max-width: 768px) {
   header {
     flex-direction: column;
   }
   .column.side, .column.main {
     width: 100%;
   }
-  /* body {
-    min-width: 992px;
-  } */
+  .band {
+    grid-template-columns: 1fr 1fr;
+  }  
+  .item-1 {
+  grid-column: 1/ span 2;
+  }
+  .item-1 h1 {
+    font-size: 30px;
+  }
+} */
+
+@media only screen and (min-width: 500px) {
+
+
+  .band {
+    grid-template-columns: 1fr 1fr;
+  }  
+  .project-1 {
+  grid-column: 1/ span 2;
+  }
+  .project-1 h2 {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  header {
+    flex-direction: column;
+  }
+  .column.side, .column.main {
+    width: 100%
+  }
+  h3 {
+    text-align: center;
+  }
 }
